<resources>
    <string name="app_name">DayTimeApp</string>
    <string name="back">Back</string>
    <string name="forward">FORWARD\n</string>
    <string name="name">Name:</string>
    <string name="Time">Time</string>
    <string name="Date">Date\n</string>
    <string name="Save">Save</string>
    <string name="Velj_2023">Velj 2023</string>
    <string name="Tuesday">Utorak</string>
    <string name="New_event">New event</string>
    <string name="Day">Day</string>
    <string name="velj_2023">Velj 2023</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="SUN">SUN</string>
    <string name="_1">1</string>
    <string name="event">Event</string>
    <string name="_10_00">10:00</string>
    <string name="event1">event1</string>
    <string name="event2">event2</string>
    <string name="event3">event3</string>
    <string name="dayview">Day View</string>
    <string name="event_1">Event 1</string>
    <string name="Event_2">Event 2</string>
    <string name="Event_3">event 3</string>
    <string name="select_time">Select Time</string>
    <string name="Vrijeme">Vrijeme\n</string>
    <string name="Set_time">Set time</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="newevent">New Event</string>
    <string name="Name">Name</string>
    <string name="Event1" />
    <string name="TUESDAY">TUESDAY</string>
    <string name="NextWeek">Next Week</string>
</resources>
