<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sivi"
    android:orientation="vertical"
    tools:context=".DnevniPregled">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/black"
            android:fontFamily="serif"
            android:onClick="PreviousDan"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mjesecDanText"
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="Veljača 2023"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:paddingTop="6dp"
            android:background="@drawable/black"
            android:fontFamily="serif"
            android:gravity="center|top"
            android:text="@string/forward"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="NextDan" />
        />

    </LinearLayout>

    <TextView
        android:id="@+id/dayOfWeekTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:fontFamily="serif"
        android:shadowColor="@color/white"
        android:shadowRadius="5"
        android:text="@string/Tuesday"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/black"
        android:fontFamily="serif"
        android:onClick="newEventAction"
        android:text="@string/New_event"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/satiListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="serif" />

</LinearLayout>