<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="@color/silver"
    android:layout_height="60dp">

    <TextView
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/TimeTxtView"
        android:textSize="20sp"
        android:fontFamily="serif"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/_10_00"/>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:fontFamily="serif"
            android:background="@drawable/black"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/event1"
            android:textSize="12sp"
            android:lines="2"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="Event 1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:fontFamily="serif"
            android:background="@drawable/black"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/event2"
            android:textSize="12sp"
            android:lines="2"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/Event_2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:fontFamily="serif"
            android:background="@drawable/black"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/event3"
            android:textSize="12sp"
            android:lines="2"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/Event_3"/>

    </LinearLayout>

</LinearLayout>